# milyes.github.io

./: .gitignore  .replit  1a22.html  22medu.html  404.html  CNAME  ConsoleIA22Web.html  IA.html  IA22_LOGIC.html  IA22_LOGIC_EXEMPLE.html  IA22_LOGIC_FONCTIONNEL.html  IA22_LOGIC_MEDICAL.html  IA22_LOGIC_OS.html  IA_DNS  Langages et Commandes en Intelligence Artificielle.html  NetSecurePro_IA_Analyser.html  README.md  acc1.html  ai_interaction.js  assistant.html  chat.html  chat1.html  chatty.html  config.json  conseil.html  console.html  contact.html  dashboardia22modules.html  default.html  deploy_netsecurepro_ia22.sh  docs.html  dzero.html  fhh.html  ggh.html  gghg.html  hhh.html  ia22_video_launcher.sh  icandex.html  ifcbndex.html  ihgndex.html  (+56 more)
IA22_Web_Console/: index.html  script.json  style.css
SYSTEMEOSIA/: manifest.json
attached_assets/: cost_2025-01-30_2025-03-01.csv
extension/: iso.nsp
ia/: ia_core.json  index.html
logic_data/: netsecure_ai_modules.json
modules/: README_modules.txt  ia22_agro.json  ia22_art.js  ia22_energy.js  ia22_memo.js  ia22_neuro.js
nodejs/: example.js  openai_utils.js  server.js
python_flask/: app.py  example.py  openai_utils.py
scripts/: build_iso.sh  deploy_nsp_suite.sh  nsp_installer.sh
simulation_system/: README.md  __init__.py  example.py  simulation_history_20250422_130349.json  simulation_history_20250422_130417.json  simulation_history_20250422_130550.json
simulation_system/core/: __init__.py  data_processor.py  data_source.py  model_simulator.py  output_handler.py  simulation_engine.py
(+13 files in other folders)
